perf(architecture): change project's architecture to clean architecture

--- a/dotnet-improvement/Pages/_ViewImports.cshtml
+++ b/dotnet-improvement/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 @using dotnet_improvement
-@namespace dotnet_improvement.Pages
+@namespace dotnet_improvement.Presentation.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
