--- a/dotnet-improvement/Views/Products/Details.cshtml
+++ b/dotnet-improvement/Views/Products/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model dotnet_improvement.Models.Product
+﻿@model dotnet_improvement.Core.Domain.Entities.Product
 
 @{
     ViewData["Title"] = "Details";
