--- a/dotnet-improvement/Views/Products/Index.cshtml
+++ b/dotnet-improvement/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<dotnet_improvement.Models.Product>
+﻿@model IEnumerable<dotnet_improvement.Core.Domain.Entities.Product>
 
 @{
     ViewData["Title"] = "Index";
